Support command line usage